# multifit

./: .gitignore  0setup.py  LICENCE  README.md  setup.cfg
doc/: changelog.md  doc.md  reference.md
doc/examples/: custom_example.py  default_example.py  example.py  minimal_example.py
doc/examples/example_fits/Mo104/: default.txt  default_1170umum.eps  default_155umum.eps  default_1776umum.eps  default_264umum.eps  default_2650umum.eps  default_30umum.eps  default_450umum.eps  default_52umum.eps  default_780umum.eps  default_89umum.eps
doc/examples/example_fits/Set1/: custom.tsv  custom_spec1um.eps  custom_spec2um.eps  custom_spec3um.eps  custom_spec4um.eps  custom_spec5um.eps  default.txt  default_spec1um.eps  default_spec2um.eps  default_spec3um.eps  default_spec4um.eps  default_spec5um.eps
doc/examples/example_spectra/Mo104/: 1170um.asc  155um.asc  264um.asc  30um.asc  52um.asc  780um.asc  89um.asc
doc/examples/example_spectra/Set1/: spec1.asc  spec4.asc  spec5.asc
lib/: UI.py  __init__.py  check.py  checks.py  exceptions.py  rewrite.py
multifit/: PlotSpectra.py  UI.py  __init__.py  fitting.py
simfit/: README.md  UI.py  __init__.py  fitting.py  peakfit.py  run.py
tests/: generate_toy_data.py  tests.py  toy_data_config.json  toy_spectrum.asc
