[metadata]
name = multifit
version = 1.0.1.0
description = Tool for fitting multiple data sets with shared parameters simultaneously
long_description = The goal of Multifit is to provide a convenient way of calculating fits with shared parameters over multiple data sets. The actual fitting is all done using the iminuit package, and I recommend that you familiarise yourself with their basic tutorial at https://iminuit.readthedocs.io/en/stable/tutorial/basic_tutorial.html
url = https://github.com/johashei/multifit
author = Johannes Sørby Heines
author_email = j.s.heines@fys.uio.no

classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Programming Language :: Python :: 3.9

[options]
packages = 
    multifit
    tests

install_requires = 
    numpy
    scipy
    matplotlib
    iminuit
    pathlib
